--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 					<li class="nav-item"><a class="nav-link link-scroll" href="#noutati">Noutăți</a></li>
 					<li class="nav-item"><a class="nav-link link-scroll" href="#echipa">Echipa</a></li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="login-button" id="dropdown-login" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Autentificare</a>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-login">
+						<a class="nav-link" href="#" id="login-button" id="dropdown-login" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Autentificare</a>
+						<div class="dropdown-menu dropdown-menu-login dropdown-menu-right" aria-labelledby="dropdown-login">
 							<form action="" method="post" name="login">
 								<div class="input-group">
 									<div class="input-group-prepend">
